k8s/cart-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-api-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: cart-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
