k8s/payment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-api-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: payment-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
