k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: "alb"
  rules:
    - http:
        paths:
          - path: /payment/
            pathType: Prefix
            backend:
              service:
                name: payment-api-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cart-api-service
                port:
                  number: 80
